<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <include
        android:layout_width="match_parent"
        android:layout_height="45dp"
        layout="@layout/only_back_title" />
    <!-- 获取焦点，为了让文本框在默认情况下不获得焦点 -->

    <LinearLayout
        android:id="@+id/email_ll"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:layout_weight="1" >

        <EditText
            android:id="@+id/edit_forget_pwd"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/edit_text"
            android:layout_margin="10dp"
            android:hint="@string/forget_password_desc"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:layout_weight="4" 
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_forget_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/background_button_login"
            android:padding="10dp"
            android:text="@string/submit"
            android:textSize="18sp" />
        <LinearLayout 
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="vertical"
		android:gravity="top"
		>
		<TextView 
			android:id="@+id/text_forget_appeal"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="right"
			android:layout_marginTop="10dp"
			android:textColor="@color/blue"
			android:text="@string/appeal"/>
	</LinearLayout>
        
    </LinearLayout>

</LinearLayout>