<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EBEBEB"
    android:orientation="vertical" >
    <include 
        android:layout_width="match_parent"
        android:layout_height="45dp"
        layout="@layout/mymessage_title_bar"/>
    <RelativeLayout 
        android:id="@+id/rl_apply_msg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/bg_note_select"
		android:layout_marginTop="15dip"
		android:layout_marginBottom="5dip"
		android:clickable="true"
        >
        <TextView 
            android:id="@+id/tv_apply_msg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
             android:paddingLeft="15dip"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:text="@string/apply_msg_str"/>
    </RelativeLayout>
    <RelativeLayout 
        android:id="@+id/rl_reply_msg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/bg_note_select"
		android:layout_marginTop="5dip"
		android:layout_marginBottom="5dip"
		android:clickable="true"
        >
        <TextView 
            android:id="@+id/tv_reply_msg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
             android:paddingLeft="15dip"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:text="@string/reply_msg_str"/>
    </RelativeLayout>
    <RelativeLayout 
        android:id="@+id/rl_system_msg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/bg_note_select"
		android:layout_marginTop="5dip"
		android:layout_marginBottom="5dip"
		android:clickable="true"
        >
        <TextView 
            android:id="@+id/tv_sys_msg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:paddingLeft="15dip"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:text="@string/system_msg_str"
            />
       
    </RelativeLayout>
    <TextView android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="5"
        />

</LinearLayout>
