<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	tools:context="com.atm.chatview.SingleChatActivity" >
<include 
	android:layout_width="match_parent"
	android:layout_height="45dp"	
	layout="@layout/single_chat_title"/>
	<ListView 
		android:id="@+id/chat_view"
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:scrollbars="vertical"
		android:background="@drawable/chat_bg_01"
		android:layout_weight="22"
		android:transcriptMode="alwaysScroll"
		android:clickable="false"
		android:divider="@null"
		android:cacheColorHint="#00000000"/>
	<LinearLayout 
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:background="#f6f5ec"
		android:paddingTop="4dp"
		android:paddingBottom="4dp"
		>
		<ImageView
			android:id="@+id/btn_pic"
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:layout_marginLeft="3dp"
			android:layout_marginStart="3dp"
			android:layout_marginRight="2dp"
			android:layout_marginEnd="2dp"
			android:contentDescription="@string/sendpic"
			android:background="@drawable/addimg"/>
		<EditText 
			android:id="@+id/chat_editor"				
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="22"
			android:layout_marginLeft="2dp"
			android:layout_marginStart="2dp"
			android:layout_marginRight="3dp"
			android:layout_gravity="center"
			android:layout_marginEnd="3dp"
			android:padding="4dp"
			android:focusable="true"
			android:textSize="22sp"
			android:maxLength="300"
			android:maxLines="4"
			
			android:background="@drawable/chat_edit"/>
		<ImageButton 
			android:id="@+id/btn_emjio"
			android:layout_weight="6"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginLeft="3dp"
			android:layout_marginStart="3dp"
			android:layout_marginRight="3dp"
			android:layout_marginEnd="3dp"
			android:layout_marginTop="3dp"
			android:layout_marginBottom="3dp"
			android:paddingLeft="10dp"
			android:paddingRight="10dp"
			android:background="@drawable/emjio"
			android:contentDescription="@string/emjio"/>
		<Button 
			android:id="@+id/btn_submit"
			android:layout_weight="7"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginLeft="2dp"
			android:layout_marginStart="2dp"
			android:layout_marginRight="6dp"
			android:layout_marginEnd="6dp"
			android:background="@drawable/chat_button"
			android:textColor="@color/white"
			android:layout_gravity="center"
			android:padding="3dp"
			android:textSize="22sp"
			android:text="@string/submit"/>
	</LinearLayout>
	<LinearLayout 
	    android:id="@+id/ll_expression"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
	    android:paddingBottom="5dip"
	    android:visibility="gone">
	    <android.support.v4.view.ViewPager
            android:id="@+id/exp_pager"
            android:layout_width="fill_parent"
            android:layout_height="150.0dip"
            android:layout_marginLeft="5dip"
            android:layout_marginRight="5dip"
            android:background="#0000"
            android:flipInterval="30"
            android:persistentDrawingCache="animation" >
        </android.support.v4.view.ViewPager>
	</LinearLayout>
</LinearLayout>
